Static swagger page functionning with controllers
